[package]
name = "hypershare"
version = "0.2.0"
authors = ["James Houghton <jamesthoughton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.19.1"
clap = "3.0.0-beta.2"
tui = "0.13"
termion = "1.5"
regex = "1"
lazy_static = "1.4.0"
boyer-moore-magiclen = "0.2.11"
